--- a/FE/angular.json
+++ b/FE/angular.json
@@ -89,7 +89,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "vex:build"
+            "buildTarget": "vex:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
