--- a/FE/angular.json
+++ b/FE/angular.json
@@ -89,8 +89,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "vex:build",
-            "proxyConfig": "proxy.conf.json"
+            "buildTarget": "vex:build"
           },
           "configurations": {
             "production": {
