--- a/BE/singlefile-api/public/web.config
+++ b/BE/singlefile-api/public/web.config
@@ -13,6 +13,15 @@
         <!-- Configuración de reescritura de URL para CodeIgniter -->
         <rewrite>
             <rules>
+                <!-- Regla para manejar CORS OPTIONS requests -->
+                <rule name="CORS Preflight" stopProcessing="true">
+                    <match url="^(.*)$" />
+                    <conditions>
+                        <add input="{REQUEST_METHOD}" pattern="OPTIONS" />
+                    </conditions>
+                    <action type="Rewrite" url="cors-handler.php" />
+                </rule>
+                
                 <!-- Regla principal para CodeIgniter - redirigir todo a index.php -->
                 <rule name="CodeIgniter Rewrite" stopProcessing="true">
                     <match url="^(.*)$" />
