fix improve navigation

--- a/BE/singlefile-api/public/web.config
+++ b/BE/singlefile-api/public/web.config
@@ -22,5 +22,18 @@
         </rewrite>
         
         <directoryBrowse enabled="false" />
+        
+        <handlers>
+            <add name="PHP-FastCGI" path="*.php" verb="GET,POST" modules="FastCgiModule" scriptProcessor="C:\php\php-cgi.exe" resourceType="Either" />
+        </handlers>
+        
+        
+        <httpErrors errorMode="Detailed" />
+        
+        <security>
+            <requestFiltering>
+                <requestLimits maxAllowedContentLength="52428800" />
+            </requestFiltering>
+        </security>
     </system.webServer>
 </configuration>
