--- a/FE/package.json
+++ b/FE/package.json
@@ -9,6 +9,7 @@
     "ng": "ng",
     "start": "ng serve --port 3600",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
