--- a/BE/config/database-config.json
+++ b/BE/config/database-config.json
@@ -29,13 +29,26 @@
   "logging": {
     "threshold": 4
   },
+  "backblaze": {
+    "keyId": "tu_key_id_aqui",
+    "applicationKey": "tu_application_key_aqui",
+    "bucketId": "tu_bucket_id_aqui",
+    "bucketName": "singlefile-bucket",
+    "apiUrl": "https://api.backblazeb2.com",
+    "downloadUrl": "https://f000.backblazeb2.com"
+  },
+  "vanguardia": {
+    "apiUrl": "https://apisvanguardia.com:400",
+    "backblazeUploadEndpoint": "/backblaze/upload"
+  },
   "comments": {
     "note": "Este archivo puede ser modificado directamente en el servidor para cambiar la configuración de la base de datos y otros parámetros",
     "instructions": [
       "1. Modifica los valores de 'database' para cambiar la conexión a la base de datos",
       "2. Cambia 'environment.baseURL' para especificar la URL base de la aplicación",
       "3. Actualiza 'security.encryptionKey' con una clave segura",
-      "4. Reinicia el servidor después de hacer cambios"
+      "4. Configura 'backblaze' con tus credenciales de Backblaze B2",
+      "5. Reinicia el servidor después de hacer cambios"
     ]
   }
 }
